AG-12816 - Fix mobile expanded type mobile layout bug

--- a/external/ag-website-shared/src/components/reference-documentation/ApiReference.module.scss
+++ b/external/ag-website-shared/src/components/reference-documentation/ApiReference.module.scss
@@ -70,6 +70,7 @@
     }
 
     pre:global(.code) {
+        max-width: calc(100vw - var(--layout-horizontal-margins) * 2);
         margin-top: 0;
         margin-bottom: $spacing-size-2;
     }
